--- a/media-dao/pom.xml
+++ b/media-dao/pom.xml
@@ -33,6 +33,20 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		
+		
+		 <dependency>
+           <groupId>org.springframework.ws</groupId>
+           <artifactId>spring-ws-core</artifactId>
+           <version>1.5.8</version>
+         </dependency>
+  
+        <dependency>
+          <groupId>org.jdom</groupId>
+          <artifactId>jdom</artifactId>
+          <version>1.1</version>
+        </dependency>
+		
+		
 		<!--
 		<dependency>
            <groupId>com.github.stephenc.hector</groupId>
@@ -56,8 +70,7 @@
 	   
 	   -->
 	   
-	  
-		
+
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc14</artifactId>
