--- a/media-web/pom.xml
+++ b/media-web/pom.xml
@@ -139,6 +139,13 @@
 			<artifactId>junit</artifactId>
 			<version>4.4</version>
 		</dependency>
+		
+		<dependency>
+			<scope>test</scope>
+			<groupId>org.openqa.selenium.client-drivers</groupId>
+			<artifactId>selenium-java-client-driver</artifactId>
+			<version>1.0-beta-1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
