--- a/media-core/pom.xml
+++ b/media-core/pom.xml
@@ -24,6 +24,12 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		
+	    <dependency>
+			<groupId>de.fd.media</groupId>
+			<artifactId>media-dao</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		
 	     <dependency>
 			<groupId>de.fd.media</groupId>
 			<artifactId>media-communication</artifactId>
@@ -54,6 +60,32 @@
 			<artifactId>hsqldb</artifactId>
 			<version>1.8.0.7</version>
 		</dependency>
+
+
+        <dependency>
+           <groupId>commons-io</groupId>
+           <artifactId>commons-io</artifactId>
+           <version>1.3.2</version>
+       </dependency>
+		
+		<dependency>
+           <groupId>commons-lang</groupId>
+           <artifactId>commons-lang</artifactId>
+           <version>2.2</version>
+        </dependency>
+
+
+        <dependency>
+          <groupId>aspectj</groupId>
+          <artifactId>aspectjweaver</artifactId>
+          <version>1.5.3</version>
+        </dependency>
+
+        <dependency>
+           <groupId>aspectj</groupId>
+           <artifactId>aspectjrt</artifactId>
+           <version>1.5.4</version>
+        </dependency>
 
 		<dependency>
 			<groupId>db4o</groupId>
