--- a/media-dao/pom.xml
+++ b/media-dao/pom.xml
@@ -69,6 +69,24 @@
 		</dependency>
 	   
 	   -->
+	   <dependency>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+        	<version>3.9.0.GA</version>
+        </dependency>
+        
+		<dependency>
+			<groupId>com.atomikos</groupId>
+			<artifactId>transactions-essentials-all</artifactId>
+			<version>3.5.9</version>
+			<exclusions>
+				<exclusion>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	   
 	   
 
 		<dependency>
@@ -100,6 +118,27 @@
            <artifactId>commons-io</artifactId>
            <version>1.3.2</version>
        </dependency>
+		
+		<dependency>
+           <groupId>commons-lang</groupId>
+           <artifactId>commons-lang</artifactId>
+           <version>2.2</version>
+        </dependency>
+
+
+        <dependency>
+          <groupId>aspectj</groupId>
+          <artifactId>aspectjweaver</artifactId>
+          <version>1.5.3</version>
+        </dependency>
+
+        <dependency>
+           <groupId>aspectj</groupId>
+           <artifactId>aspectjrt</artifactId>
+           <version>1.5.4</version>
+        </dependency>
+		
+		
 		<dependency>
 			<groupId>db4o</groupId>
 			<artifactId>db4o</artifactId>
